--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,5 +1,5 @@
 # Main menu navigation (导航目录)
-# see https://butterfly.js.org/posts/4aa8abbe/#導航菜單
+# see https://butterfly.js.org/posts/4aa8abbe/#导航菜单
 # --------------------------------------
 
 menu:
@@ -144,7 +144,7 @@ post_meta:
     tags: true # true or false 主页是否显示标签
     label: true # true or false 显示描述性文字
   post:
-    date_type: both # created or updated or both 文章日期是创建日或者更新日或都显示
+    date_type: created # created or updated or both 文章日期是创建日或者更新日或都显示
     date_format: date # date/relative 显示日期还是相对日期
     categories: true # true or false 文章是否显示分类
     tags: true # true or false 文章頁是否显示白噢钱
