--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: README.md # 部署的时候不包含的文件
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -40,13 +40,13 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
-relative_link: false
+post_asset_folder: false #是否启用资源文件夹（用来存放相对路径图片或文件）
+relative_link: false # 把链接改为与根目录的相对位址
 future: true
 highlight:
   enable: true
   line_number: false
-  auto_detect: false
+  auto_detect: true #自动判断代码语言
   tab_replace: ''
   wrap: true
   hljs: false
@@ -56,10 +56,6 @@ prismjs:
   line_number: true
   tab_replace: ''
 
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
   per_page: 10
@@ -78,8 +74,8 @@ meta_generator: true
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
+date_format: YYYY-MM-DD # 博客日期格式
+time_format: HH:mm:ss # 博客时间格式
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
@@ -94,10 +90,35 @@ include:
 exclude:
 ignore:
 
+#归档页的分页设置
+archive_generator: #归档页的配置
+  per_page: 30 #归档页每页博客数
+  yearly: true #按年归档
+  monthly: true #按月归档
+  
+  #标签页的分页设置
+tag_generator:
+  per_page: 20 #标签页每页博客数
+
 # 主题相关
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme: butterfly #butterfly
+
+  # 设置博客单词统计
+symbols_count_time:
+  symbols: true  # 文章字数统计
+  time: true  # 文章阅读时间统计
+  total_symbols: true  # 站点总字数统计
+  total_time: true # 站点总阅读时间统计
+  exclude_codeblock: false
+
+# 搜索
+search:
+    path: search.xml
+    field: post
+    format: html
+    limit: 10000
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
@@ -121,9 +142,17 @@ live2d:
   debug: false # 调试, 是否在控制台输出日志
   model:
     use: live2d-widget-model-tororo # npm-module package name
-  display:
-    vOffset: 300
-    hOffset: 10
-  
+    
+# Algolia 搜索功能配置
+algolia:
+  appId: 'MY0L9JC4NK'
+  apiKey: 'e5dd1288ea8d33ac5e46ef2a11c0ce56'
+  adminApiKey: '0f00af9c6896a88c57483628ada52fc3'
+  indexName: 'hexo_search'
+    
+    
+    
+    
+    
 
   
