--- a/package.json
+++ b/package.json
@@ -9,30 +9,28 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.1.0"
+    "version": "6.2.0"
   },
   "dependencies": {
-    "aplayer": "^1.10.1",
-    "hexo": "^6.0.0",
+    "hexo": "^6.2.0",
+    "hexo-algolia": "^1.3.2",
+    "hexo-algoliasearch": "^1.0.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-helper-live2d": "^3.1.1",
-    "hexo-lazyload-image": "^1.0.10",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-jade": "^0.3.0",
+    "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^5.0.0",
-    "hexo-renderer-pug": "^3.0.0",
-    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-landscape": "^0.0.3",
-    "hexo-wordcount": "^6.0.1",
-    "live2d-widget-model-tororo": "^1.0.5"
+    "hexo-wordcount": "^6.0.1"
   }
 }
