--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -244,8 +244,8 @@ comments:
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
   lazyload: true
-  count: true # Display comment count in post's top_img
-  card_post_count: true # Display comment count in Home Page
+  count: true # 文章top_image上是否显示评论数量
+  card_post_count: true # 首页文章是否显示评论数量
 
 # disqus
 # https://disqus.com/
@@ -582,7 +582,7 @@ hr_icon:
 subtitle:
   enable: true
   # Typewriter Effect (打字效果)
-  effect: false
+  effect: true
   # loop (循環打字)
   loop: true
   # source 調用第三方服務
