--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sunny
+title: Sunny's Blog
 subtitle: ''
 description: 千里之行，始于足下
 keywords:
