--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -36,6 +36,8 @@ copy:
 # formal:
 #   icon: link || the description
 social:
+    fab fa-qq: http://wpa.qq.com/msgrd?v=3&uin=532619121&site=qq&menu=yes || QQ
+    fab fa-weixin: https://codersunny.com/images/wechat.png || WeChat
     fab fa-github: https://github.com/HappyCoderSunny || Github
     fas fa-envelope: mailto:532619121@qq.com || Email
 
@@ -123,7 +125,7 @@ post_meta:
     tags: true # true or false 主页是否显示标签
     label: true # true or false 显示描述性文字
   post:
-    date_type: created # created or updated or both 文章日期是创建日或者更新日或都显示
+    date_type: both # created or updated or both 文章日期是创建日或者更新日或都显示
     date_format: date # date/relative 显示日期还是相对日期
     categories: true # true or false 文章是否显示分类
     tags: true # true or false 文章頁是否显示标签
@@ -205,7 +207,7 @@ post_pagination: 1
 
 # Displays outdated notice for a post (文章過期提醒)
 noticeOutdate:
-  enable: false
+  enable: true
   style: flat # style: simple/flat
   limit_day: 500 # When will it be shown
   position: top # position: top/bottom
@@ -244,8 +246,8 @@ comments:
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
   lazyload: true
-  count: true # 文章top_image上是否显示评论数量
-  card_post_count: true # 首页文章是否显示评论数量
+  count: false # 文章top_image上是否显示评论数量
+  card_post_count: false # 首页文章是否显示评论数量
 
 # disqus
 # https://disqus.com/
@@ -613,7 +615,7 @@ aside:
     enable: true
     description:
     button:
-      enable: true
+      enable: false
       icon: fab fa-github
       text: Follow me
       link: https://github.com/HappyCoderSunny
@@ -653,7 +655,7 @@ aside:
 busuanzi:
   site_uv: true
   site_pv: true
-  page_pv: true
+  page_pv: false
 
 # Time difference between publish date and now (網頁運行時間)
 # Formal: Month/Day/Year Time or Year/Month/Day Time
