--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "version": "6.2.0"
   },
   "dependencies": {
+    "@neilsustc/markdown-it-katex": "^1.0.0",
     "hexo": "^6.2.0",
     "hexo-algolia": "^1.3.2",
     "hexo-algoliasearch": "^1.0.0",
     "hexo-asset-image-for-hexo5": "^2.1.7",
     "hexo-browsersync": "^0.3.0",
+    "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -27,7 +29,7 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-jade": "^0.5.0",
-    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-markdown-it": "^6.0.1",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
