--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,20 +3,13 @@
 # --------------------------------------
 
 menu:
-   首页: / || fas fa-home
-   标签: /tags/ || fas fa-tags
-   分类: /categories/ || fas fa-folder-open
-   娱乐库 ||fas fa-list:
+  首页: / || fas fa-home
+  标签: /tags/ || fas fa-tags
+  分类: /categories/ || fas fa-folder-open
+  娱乐库 ||fas fa-list:
     音乐库: /music/ || fas fa-music
     图片库: /pictures/ || fas fa-images
-   友情链接: /link/ || fas fa-link
-  # Tags: /tags/ || fas fa-tags
-  # Categories: /categories/ || fas fa-folder-open
-  # List||fas fa-list:
-  #   Music: /music/ || fas fa-music
-  #   Movie: /movies/ || fas fa-video
-  # Link: /link/ || fas fa-link
-  # About: /about/ || fas fa-heart
+  友情链接: /link/ || fas fa-link
 
 # Code Blocks (代码相关)
 # --------------------------------------
@@ -109,6 +102,7 @@ cover:
 # Sunny添加的一些配置项
 # butterfly为默认样式，volantis为站点卡片样式，flexcard为弹性卡片样式
 flink_style: volantis # butterfly | volantis | flexcard
+
 
 # 替换无法显示的图片的图片
 error_img:
@@ -438,10 +432,8 @@ google_adsense:
 # --------------------------------------
 
 site_verification:
-  # - name: google-site-verification
-  #   content: xxxxxx
-  # - name: baidu-site-verification
-  #   content: xxxxxxx
+  - name: baidu-site-verification
+    content: code-n3yl43eW4P
 
 # Beautify/Effect (美化/效果)
 # --------------------------------------
@@ -624,7 +616,7 @@ aside:
       link: https://github.com/HappyCoderSunny
   card_announcement:
     enable: true
-    content: 欢迎来到Sunny的技术杂货铺，如果喜欢记得收藏奥～
+    content: 阅读过程中如果遇到问题，请及时评论或者留言，看到了会第一时间回复，如果未收到回复也可加博主vx（申请时请备注）。
   card_recent_post: # 最新文章
     enable: true
     limit: 5 # 如果设置为0 将会展示所有文章
@@ -820,16 +812,18 @@ css_prefix: true
 inject:
   head:
      - <link rel="stylesheet" href="/css/background.css">
-     - <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-     - <script src="https://sdk.51.la/perf/js-sdk-perf.min.js" crossorigin="anonymous"></script>
-     - <script> LA.init({id:"JiClMYy0r4fHzdH0",ck:"JiClMYy0r4fHzdH0"})</script>
-     - <script>new LingQue.Monitor().init({id:"JiClV91tQ6XNKpMM",sendSuspicious:true});</script>
      - <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="defer" onload="this.media='all'">
+     # Sunny TODO：51啦统计配置，以后需要的时候再打开
+    #  - <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    #  - <script src="https://sdk.51.la/perf/js-sdk-perf.min.js" crossorigin="anonymous"></script>
+    #  - <script> LA.init({id:"JiClMYy0r4fHzdH0",ck:"JiClMYy0r4fHzdH0"})</script>
+    #  - <script>new LingQue.Monitor().init({id:"JiClV91tQ6XNKpMM",sendSuspicious:true});</script>
 
   bottom:
-    - <div class="aplayer no-destroy" data-id="173141373" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false"> </div>
     - <script defer src="https://fastly.jsdelivr.net/gh/graingert/wow@1.3.0/dist/wow.min.js"></script>
     - <script defer data-pjax src="/js/wow_init.js"></script>
+    # Sunny TODO：全局播放器设置
+    # - <div class="aplayer no-destroy" data-id="173141373" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false"> </div>
         
 # CDN
 # Don't modify the following settings unless you know how they work
