--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@neilsustc/markdown-it-katex": "^1.0.0",
     "hexo": "^6.2.0",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-algolia": "^1.3.2",
     "hexo-algoliasearch": "^1.0.0",
     "hexo-asset-image-for-hexo5": "^2.1.7",
+    "hexo-baidu-url-submit": "^0.0.6",
     "hexo-browsersync": "^0.3.0",
     "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
