--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,3 +1,12 @@
+- class_name: Hexo官网
+  class_desc: 
+  link_list:
+    - name: Hexo
+      link: https://hexo.io/zh-tw/
+      avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
+      descr: 快速、简洁且高效的博客框架
+      siteshot:
+      
 - class_name: 主题作者
   class_desc: 
   link_list:
